# AnaliticMPv2.0

./: .gitignore  README.md  app.py  creds.env  grafana_config.json  main.py  marcetplaces_config.jsonl  pyproject.toml  start.py  test.txt
src/: config_mg.py  loger.py  menu.py  models.py  regions.py  utils.py
src/grafana/: grafana.py  grafana_api.py  grafana_config.json  grafana_exception.py
src/redash/: redash.py  redash_api.py  redash_exception.py
